; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_pty.c_ptmx_open.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_pty.c_ptmx_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32 }
%struct.tty = type { i32 }

@MAX_PTYS = common dso_local global i32 0, align 4
@_ENOSPC = common dso_local global i32 0, align 4
@pty_master = common dso_local global i32 0, align 4
@TTY_PSEUDO_MASTER_MAJOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ptmx_open(%struct.fd* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fd*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tty*, align 8
  store %struct.fd* %0, %struct.fd** %3, align 8
  %6 = call i32 (...) @pty_reserve_next()
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @MAX_PTYS, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i32, i32* @_ENOSPC, align 4
  store i32 %11, i32* %2, align 4
  br label %26

12:                                               ; preds = %1
  %13 = load i32, i32* @TTY_PSEUDO_MASTER_MAJOR, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call %struct.tty* @tty_get(i32* @pty_master, i32 %13, i32 %14)
  store %struct.tty* %15, %struct.tty** %5, align 8
  %16 = load %struct.tty*, %struct.tty** %5, align 8
  %17 = call i64 @IS_ERR(%struct.tty* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %12
  %20 = load %struct.tty*, %struct.tty** %5, align 8
  %21 = call i32 @PTR_ERR(%struct.tty* %20)
  store i32 %21, i32* %2, align 4
  br label %26

22:                                               ; preds = %12
  %23 = load %struct.tty*, %struct.tty** %5, align 8
  %24 = load %struct.fd*, %struct.fd** %3, align 8
  %25 = call i32 @tty_open(%struct.tty* %23, %struct.fd* %24)
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %22, %19, %10
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @pty_reserve_next(...) #1

declare dso_local %struct.tty* @tty_get(i32*, i32, i32) #1

declare dso_local i64 @IS_ERR(%struct.tty*) #1

declare dso_local i32 @PTR_ERR(%struct.tty*) #1

declare dso_local i32 @tty_open(%struct.tty*, %struct.fd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
